# aws-cost-notification

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  architecture.drawio  requirements.txt  template.yaml
src/: cost_explorer.rs  cost_response_parser.rs  cost_usage_client.rs  date_range.rs  main.rs  message_builder.rs  reporting_date.rs  slack_notifier.rs  test_utils.rs  total_cost.rs
src/cost_explorer/: cost_response_parser.rs  cost_usage_client.rs  test_utils.rs
