[package]
authors = ["tatamiya <tamyuji1002@gmail.com>"]
edition = "2018"
name = "aws_cost_notification"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
rusoto_ce = "0"
rusoto_core = "0.47"
serde_json = "1"
slack-hook = "0.8"
tokio = "1"
